--- a/live-wallpapers/index.html
+++ b/live-wallpapers/index.html
@@ -15,18 +15,14 @@
 	</head>
 	<body>
 
-		<h1>Welcome!</h1>
-		<p>This is my github repo for website related content.</p>
+		<h1>Live Wallpapers</h1>
+		<p>Stupid ass memes.</p>
 
 		<ul>
-			<li><a href="/live-wallpapers">Live Wallpapers</a></li>
-			<!--<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>-->
+			<li><a href="/live-wallpapers/cenarang">"Cenarang"</a></li>
+			<li><a href="/live-wallpapers/greatest-angle">"The Greatest Angle"</a></li>
+			<li><a href="/live-wallpapers/knob-slob">"Knob Slob"</a></li>
+			<li><a href="/live-wallpapers/pepper-justive">"Pepper Justice"</a></li>
 		</ul>
 
 	</body>
