Dandy - Fixes and Refactoring
- Changed name to Dandy
- Converted to pure JS for the time being
- Fixed email addresses and other links in index.html
- Changed SVG logo to regular HTML

--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
 
 		<ul>
 			<li><a href="/live-wallpapers">Live Wallpapers</a></li>
-			<li><a href="/fiction-saver">Fan Fiction Saver</a></li>
-			<!--<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>-->
+			<li><a href="/dandy">Dandy (Story Downloader)</a></li>
 		</ul>
 
 	</body>
