--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 		<h1>Welcome!</h1>
 		<p>This is my github repo for website related content.</p>
+		<p>This is a test please pull this to development.</p>
 
 		<ul>
 			<li><a href="/live-wallpapers">Live Wallpapers</a></li>
