--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
 		<h1>Welcome!</h1>
 		<p>This is my github repo for website related content.</p>
+		<p>This is a test please pull this to development.</p>
 
 		<ul>
+			<li><a href="/live-wallpapers">Live Wallpapers</a></li>
 			<li><a href="/dandy">Dandy (Story Downloader)</a></li>
 		</ul>
 
