--- a/dandy/index.html
+++ b/dandy/index.html
@@ -24,8 +24,7 @@
 			<div class="dialog">
 				<div class="dialog-title">Dandy is an online story downloader.</div>
 				<div class="dialog-content">
-					<p>[About section here]</p>
-					<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a>.</p>
+					<p>More info coming soon.<br>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a>.</p>
 				</div>
 				<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 			</div>
@@ -56,21 +55,16 @@
 						<li><a class="button" data-page="http://adamfranco.ca/">contact</a></li>
 					</ul>
 				</nav>
-				<h1>DANDY</h1>
+				<h1>dandy.</h1>
 			</div>
 		</header>
 
 		<div id="form">
 			<div class="wrapper">
-				<input id="url" class="textbox" placeholder="URL" value="https://www.fictionpress.com/s/1284413/1/All-About-You-Part-II">
+				<input id="url" class="textbox" placeholder="URL" value="">
 				<span id="format" class="button">
 					<span>EPUB</span>
-					<div id="format-list">
-						<p>EPUB</p>
-						<p>MOBI</p>
-						<p>HTML</p>
-						<p>PDF</p>
-					</div>
+					<div id="format-list"></div>
 				</span>
 				<button id="download" class="button green"><i class="fa fa-fw fa-download"></i><span>DOWNLOAD</span></button>
 			</div>
