dandy - Support for hpfanficarchive & fixes

--- a/dandy/index.html
+++ b/dandy/index.html
@@ -24,7 +24,9 @@
 			<div class="dialog">
 				<div class="dialog-title">Dandy is an online story downloader.</div>
 				<div class="dialog-content">
-					<p>More info coming soon.<br>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a>.</p>
+					<p>This is a client-side app, meaning it costs me nothing to run, and can be hosted for free on my <a href="//www.github.com/adamcfranco">GitHub</a>.</p>
+					<p>Check out the <strong>support</strong> link for info on what formats and sites are currently available.</p>
+					<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a> by <a href="//www.adamfranco.ca">Adam Franco</a>.</p>
 				</div>
 				<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 			</div>
@@ -34,13 +36,12 @@
 			<div class="dialog">
 				<div class="dialog-title">Support Information</div>
 				<div class="dialog-content">
-					<p>I'm periodically adding support for different websites and formats, but there is no real time-frame for updates or fixes.</p>
-					<p>If you are experiencing any issues downloading a story, please send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>. I will try to provide help as often as I can.</p>
+					<p>I will be periodically adding support for different websites and formats, but there is no real time-frame for updates or fixes.</p>
+					<p>If you are experiencing any issues downloading a story, or have a suggestion for future updates to dandy, please send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>. I will try to provide help as often as I can.</p>
 					<p><strong>Currently supported websites:</strong></p>
 					<ul id="supported_site_list"></ul>
 					<p><strong>Currently supported formats:</strong></p>
-					<ul id="supported_format_list"></ul>
-					<p>Have a general question or want to suggest a website/format for a future update? Send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>!</p>
+					<ul id="supported_format_list"></ul>	
 				</div>
 				<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 			</div>
@@ -52,7 +53,6 @@
 					<ul>
 						<li><a class="button" data-page="about">about</a></li>
 						<li><a class="button" data-page="support">support</a></li>
-						<li><a class="button" data-page="http://adamfranco.ca/">contact</a></li>
 					</ul>
 				</nav>
 				<h1>dandy.</h1>
@@ -71,6 +71,7 @@
 		</div>
 
 		<div id="preview" class="collapsed"></div>
+<!-- 		<div id="preview" class=""><div class="wrapper"><div id="head"><a class="muted" href="http://http://anonymouse.org/cgi-bin/anon-www.cgi/http://www.hpfanficarchive.com/stories/viewstory.php?sid=1970" title="FanFiction.net">1970</a><h2>N/A</h2>by <a href="http://www.fanfiction.netundefined">N/A</a> on 2018-04-20</div><p>“NOOOOOOOOOOOOOOOOOOOOOOO!”<br style="color: #2a2a2a; font-family: ">The world seemed to move in slow motion, as Rose Potter, the girl-who-lived, beater of trolls, new marauder and many other less pleasant titles, watched as the blasting spell hit her godmother, the only real family she had left, her rock, her teacher, she watched her slowly being thrown in the veil’s direction.<br style="color: #2a2a2a; font-family: ">Until a mysterious green-eyed boy changed everything!<br style="color: #2a2a2a; font-family: ">AU! Harry and Female Harry (Rose), Harem!</p><ul id="meta"><li><a title="Genre(s)">Adult (+ 11 more)<div class="extra wrapper"><span>Adult - Femslash</span><span>Adventure</span><span>Adventure/Action</span><span>AT - Alternative Timeline</span><span>AU</span><span>Erotica</span><span>Fluff</span><span>Friendship</span><span>Humor</span><span>Multiple Partners</span><span>Parody</span></div></a></li><li><a title="Rating">N/A</a></li><li><a title="Status">N/A</a></li><li><a title="Chapter Count">N/A</a></li><li><a title="Word Count">16,836</a></li><li><a title="Last Update">2018-04-30</a></li></ul></div></div> -->
 
 		<div id="status">
 			<div class="wrapper">
