dandy - Added support for adult-fanfiction.org

--- a/dandy/index.html
+++ b/dandy/index.html
@@ -1,102 +1,99 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-	<head>
-		<meta charset="iso-8859-1">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="fictionsave save story fan fiction download harry potter">
-		<meta name="author" content="Adam Franco">
-		<meta name="description" content="Ficiton Save allows you to download stories and fanfiction from various websites around the web.">
-		<link rel="icon" type="image/png" href="favicon/256.png" sizes="256x256">
-		<link rel="icon" type="image/png" href="favicon/128.png" sizes="128x128">
-		<link rel="icon" type="image/png" href="favicon/64.png" sizes="64x64">
-		<link rel="icon" type="image/png" href="favicon/32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="favicon/16.png" sizes="16x16">
-		<link rel="shortcut icon" href="favicon/favicon.ico">
-		<title>Dandy - The Online Story Downloader.</title>
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="core/stylesheet.css">
-	</head>
-	<body>
+<head>
+	<meta charset="iso-8859-1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="fictionsave save story fan fiction download harry potter">
+	<meta name="author" content="Adam Franco">
+	<meta name="description" content="Ficiton Save allows you to download stories and fanfiction from various websites around the web.">
+	<link rel="icon" type="image/png" href="favicon/256.png" sizes="256x256">
+	<link rel="icon" type="image/png" href="favicon/128.png" sizes="128x128">
+	<link rel="icon" type="image/png" href="favicon/64.png" sizes="64x64">
+	<link rel="icon" type="image/png" href="favicon/32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon/16.png" sizes="16x16">
+	<link rel="shortcut icon" href="favicon/favicon.ico">
+	<title>Dandy - The Online Story Downloader.</title>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="core/stylesheet.css">
+</head>
+<body>
 
-		<div class="dialog-wrapper" id="about">
-			<div class="dialog">
-				<div class="dialog-title">Dandy is an online story downloader.</div>
-				<div class="dialog-content">
-					<p>This is a client-side app, meaning it costs me nothing to run, and can be hosted for free on my <a href="//www.github.com/adamcfranco">GitHub</a>.</p>
-					<p>Check out the <strong>support</strong> link for info on what formats and sites are currently available.</p>
-					<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a> by <a href="//www.adamfranco.ca">Adam Franco</a>.</p>
-				</div>
-				<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
+	<div class="dialog-wrapper" id="about">
+		<div class="dialog">
+			<div class="dialog-title">Dandy is an online story downloader.</div>
+			<div class="dialog-content">
+				<p>This is a client-side app, meaning it costs me nothing to run, and can be hosted for free on my <a href="//www.github.com/adamcfranco">GitHub</a>.</p>
+				<p>Check out the <strong>support</strong> link for info on what formats and sites are currently available.</p>
+				<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a> by <a href="//www.adamfranco.ca">Adam Franco</a>.</p>
 			</div>
+			<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 		</div>
+	</div>
 
-		<div class="dialog-wrapper" id="support">
-			<div class="dialog">
-				<div class="dialog-title">Support Information</div>
-				<div class="dialog-content">
-					<p>I will be periodically adding support for different websites and formats, but there is no real time-frame for updates or fixes.</p>
-					<p>If you are experiencing any issues downloading a story, or have a suggestion for future updates to dandy, please send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>. I will try to provide help as often as I can.</p>
-					<p><strong>Currently supported websites:</strong></p>
-					<ul id="supported_site_list"></ul>
-					<p><strong>Currently supported formats:</strong></p>
-					<ul id="supported_format_list"></ul>	
-				</div>
-				<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
+	<div class="dialog-wrapper" id="support">
+		<div class="dialog">
+			<div class="dialog-title">Support Information</div>
+			<div class="dialog-content">
+				<p>I will be periodically adding support for different websites and formats, but there is no real time-frame for updates or fixes.</p>
+				<p>If you are experiencing any issues downloading a story, or have a suggestion for future updates to dandy, please send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>. I will try to provide help as often as I can.</p>
+				<p><strong>Currently supported websites:</strong></p>
+				<ul id="supported_site_list"></ul>
+				<p><strong>Currently supported formats:</strong></p>
+				<ul id="supported_format_list"></ul>	
 			</div>
+			<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 		</div>
+	</div>
 
-		<header>
-			<div class="wrapper">
-				<nav>
-					<ul>
-						<li><a class="button" data-page="about">about</a></li>
-						<li><a class="button" data-page="support">support</a></li>
-					</ul>
-				</nav>
-				<h1>dandy.</h1>
-			</div>
-		</header>
-
-		<div id="form">
-			<div class="wrapper">
-				<input id="url" class="textbox" placeholder="URL" value="">
-				<span id="format" class="button">
-					<span>EPUB</span>
-					<div id="format-list"></div>
-				</span>
-				<button id="download" class="button green"><i class="fa fa-fw fa-download"></i><span>DOWNLOAD</span></button>
-			</div>
+	<header>
+		<div class="wrapper">
+			<nav>
+				<ul>
+					<li><a class="button" data-page="about">about</a></li>
+					<li><a class="button" data-page="support">support</a></li>
+				</ul>
+			</nav>
+			<h1>dandy.</h1>
 		</div>
+	</header>
 
-		<div id="preview" class="collapsed"></div>
-<!-- 		<div id="preview" class=""><div class="wrapper"><div id="head"><a class="muted" href="http://http://anonymouse.org/cgi-bin/anon-www.cgi/http://www.hpfanficarchive.com/stories/viewstory.php?sid=1970" title="FanFiction.net">1970</a><h2>N/A</h2>by <a href="http://www.fanfiction.netundefined">N/A</a> on 2018-04-20</div><p>“NOOOOOOOOOOOOOOOOOOOOOOO!”<br style="color: #2a2a2a; font-family: ">The world seemed to move in slow motion, as Rose Potter, the girl-who-lived, beater of trolls, new marauder and many other less pleasant titles, watched as the blasting spell hit her godmother, the only real family she had left, her rock, her teacher, she watched her slowly being thrown in the veil’s direction.<br style="color: #2a2a2a; font-family: ">Until a mysterious green-eyed boy changed everything!<br style="color: #2a2a2a; font-family: ">AU! Harry and Female Harry (Rose), Harem!</p><ul id="meta"><li><a title="Genre(s)">Adult (+ 11 more)<div class="extra wrapper"><span>Adult - Femslash</span><span>Adventure</span><span>Adventure/Action</span><span>AT - Alternative Timeline</span><span>AU</span><span>Erotica</span><span>Fluff</span><span>Friendship</span><span>Humor</span><span>Multiple Partners</span><span>Parody</span></div></a></li><li><a title="Rating">N/A</a></li><li><a title="Status">N/A</a></li><li><a title="Chapter Count">N/A</a></li><li><a title="Word Count">16,836</a></li><li><a title="Last Update">2018-04-30</a></li></ul></div></div> -->
-
-		<div id="status">
-			<div class="wrapper">
-				<h3>Status: Idle</h3>
-				<table><tbody></tbody></table>
-			</div>
+	<div id="form">
+		<div class="wrapper">
+			<input id="url" class="textbox" placeholder="URL" value="">
+			<span id="format" class="button">
+				<span>EPUB</span>
+				<div id="format-list"></div>
+			</span>
+			<button id="download" class="button green"><i class="fa fa-fw fa-download"></i><span>DOWNLOAD</span></button>
 		</div>
+	</div>
 
-<!-- 		<div id="no-js-notification">
-			<div class="wrapper">
-				<span class="header-img"></span>
-				<p><strong>Hi!</strong></p>
-				<p>Dandy is built on <strong>javascript</strong>. Please enable it and refresh your browser in order to use it!</p>
-			</div>
-		</div> -->
+	<div id="preview" class="collapsed"></div>
 
-		<script type="text/javascript" src="core/libraries/tidyhtml5.min.js"></script>
-		<script type="text/javascript" src="core/libraries/jquery.min.js"></script>
-		<script type="text/javascript" src="core/libraries/filesaver.min.js"></script>
-		<script type="text/javascript" src="core/libraries/jszip.min.js"></script>
-		<script type="text/javascript" src="core/modules/dropdown.js"></script>
-		<script type="text/javascript" src="core/modules/validation.js"></script>
-		<script type="text/javascript" src="core/modules/websites.js"></script>
-		<script type="text/javascript" src="core/modules/formats.js"></script>
-		<script type="text/javascript" src="core/engine.js"></script>
+	<div id="status">
+		<div class="wrapper">
+			<h3>Status: Idle</h3>
+			<table><tbody></tbody></table>
+		</div>
+	</div>
 
-	</body>
+<!-- 	<div id="no-js-notification">
+		<div class="wrapper">
+			<h3>Hi.</h3>
+			<p>Dandy is built using <strong>JavaScript</strong>. Please enable it and refresh your browser in order to use it!</p>
+		</div>
+	</div> -->
+
+	<script type="text/javascript" src="core/libraries/jquery.min.js"></script>
+	<script type="text/javascript" src="core/libraries/tidyhtml5.min.js"></script>
+	<script type="text/javascript" src="core/libraries/filesaver.min.js"></script>
+	<script type="text/javascript" src="core/libraries/jszip.min.js"></script>
+	<script type="text/javascript" src="core/engine.js"></script>
+	<script type="text/javascript" src="core/modules/validation.js"></script>
+	<script type="text/javascript" src="core/modules/websites.js"></script>
+	<script type="text/javascript" src="core/modules/formats.js"></script>
+	
+</body>
 </html>
