--- a/dandy/index.html
+++ b/dandy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-	<meta charset="iso-8859-1">
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="fictionsave save story fan fiction download harry potter">
@@ -90,8 +90,11 @@
 	<script type="text/javascript" src="core/libraries/tidyhtml5.min.js"></script>
 	<script type="text/javascript" src="core/libraries/filesaver.min.js"></script>
 	<script type="text/javascript" src="core/libraries/jszip.min.js"></script>
+
+	<script type="text/javascript" src="core/libraries/pdfmake.min.js"></script>
+	<script type="text/javascript" src="core/libraries/vfs_fonts.js"></script>
+
 	<script type="text/javascript" src="core/engine.js"></script>
-	<script type="text/javascript" src="core/modules/validation.js"></script>
 	<script type="text/javascript" src="core/modules/websites.js"></script>
 	<script type="text/javascript" src="core/modules/formats.js"></script>
 	
