--- a/ficfetch/index.html
+++ b/ficfetch/index.html
@@ -4,29 +4,29 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="fictionsave save story fan fiction download harry potter">
+	<meta name="keywords" content="FicFetch save story fan fiction download harry potter">
 	<meta name="author" content="Adam Franco">
-	<meta name="description" content="Ficiton Save allows you to download stories and fanfiction from various websites around the web.">
-	<link rel="icon" type="image/png" href="favicon/256.png" sizes="256x256">
+	<meta name="description" content="FicFetch allows you to download stories and fanfiction from various websites around the web.">
+<!-- 	<link rel="icon" type="image/png" href="favicon/256.png" sizes="256x256">
 	<link rel="icon" type="image/png" href="favicon/128.png" sizes="128x128">
 	<link rel="icon" type="image/png" href="favicon/64.png" sizes="64x64">
 	<link rel="icon" type="image/png" href="favicon/32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicon/16.png" sizes="16x16">
-	<link rel="shortcut icon" href="favicon/favicon.ico">
-	<title>Dandy - The Online Story Downloader.</title>
+	<link rel="shortcut icon" href="favicon/favicon.ico"> -->
+	<title>FicFetch - The Online Story Downloader.</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="core/stylesheet.css">
 </head>
 <body>
 
 	<div class="dialog-wrapper" id="about">
 		<div class="dialog">
-			<div class="dialog-title">Dandy is an online story downloader.</div>
+			<div class="dialog-title">FicFetch is an online story downloader.</div>
 			<div class="dialog-content">
 				<p>This is a client-side app, meaning it costs me nothing to run, and can be hosted for free on my <a href="//www.github.com/adamcfranco">GitHub</a>.</p>
 				<p>Check out the <strong>support</strong> link for info on what formats and sites are currently available.</p>
-				<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="http://www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a> by <a href="//www.adamfranco.ca">Adam Franco</a>.</p>
+				<p>Created with <span class="heart">&#10084;</span> for the community over at <a href="//www.reddit.com/r/HPFanFiction">/r/HPFanFiction</a> by <a href="//www.adamfranco.ca">Adam Franco</a>.</p>
 			</div>
 			<div class="dialog-options" align="right"><input type="button" class="button flat" value="CLOSE"></div>
 		</div>
@@ -37,7 +37,7 @@
 			<div class="dialog-title">Support Information</div>
 			<div class="dialog-content">
 				<p>I will be periodically adding support for different websites and formats, but there is no real time-frame for updates or fixes.</p>
-				<p>If you are experiencing any issues downloading a story, or have a suggestion for future updates to dandy, please send an email to <a href="mailto:dandy@adamfranco.ca">dandy@adamfranco.ca</a>. I will try to provide help as often as I can.</p>
+				<p>If you are experiencing any issues downloading a story, or have a suggestion for future updates to dandy, please send an email to <a href="mailto:support@ficfetch.xyz">support@ficfetch.xyz</a>. I will try to provide help as often as I can.</p>
 				<p><strong>Currently supported websites:</strong></p>
 				<ul id="supported_site_list"></ul>
 				<p><strong>Currently supported formats:</strong></p>
@@ -55,7 +55,7 @@
 					<li><a class="button" data-page="support">support</a></li>
 				</ul>
 			</nav>
-			<h1>dandy.</h1>
+			<h1>ficfetch</h1>
 		</div>
 	</header>
 
