--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<p>This is my github repo for website related content.</p>
 
 		<ul>
-			<li><a href="/dandy">Dandy (Story Downloader)</a></li>
+			<li><a href="/ficfetch">FicFetch (Story Downloader)</a></li>
 		</ul>
 
 	</body>
