--- a/ficfetch/index.html
+++ b/ficfetch/index.html
@@ -15,7 +15,7 @@
 	<link rel="shortcut icon" href="favicon/favicon.ico"> -->
 	<title>FicFetch - The Online Story Downloader.</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="core/stylesheet.css">
 </head>
 <body>
@@ -90,7 +90,6 @@
 	<script type="text/javascript" src="core/libraries/tidyhtml5.min.js"></script>
 	<script type="text/javascript" src="core/libraries/filesaver.min.js"></script>
 	<script type="text/javascript" src="core/libraries/jszip.min.js"></script>
-
 	<script type="text/javascript" src="core/libraries/pdfmake.min.js"></script>
 	<script type="text/javascript" src="core/libraries/vfs_fonts.js"></script>
 
