ficfetch - Bullhorn icon

--- a/ficfetch/index.html
+++ b/ficfetch/index.html
@@ -37,7 +37,8 @@
 					</ul>
 				</nav>
 				<h1>ficfetch</h1>
-				<span class="notification">Support for
+				<span class="notification">
+					<i class="fa fa-bullhorn"></i> Support for
 					<a href="//www.siye.co.uk/">Sink Into Your Eyes</a> has been added.</span>
 			</div>
 		</header>
